fixup! fix some padding issues and filter button alignment

--- a/apps/site/web/static/css/_button-group.scss
+++ b/apps/site/web/static/css/_button-group.scss
@@ -145,8 +145,7 @@
 
 .tab-select-btnbar-group {
   @include media-breakpoint-down(xs) {
-    display: table;
-    width: 100%;
+    display: flex;
   }
 }
 
@@ -155,9 +154,10 @@
     border-color: $brand-primary;
     border-left: 0;
     border-radius: 0;
-    display: table-cell;
+    flex: 1;
     padding: $base-spacing-sm $space-6;
     text-align: center;
+    width: 100%;
 
     &:first-child {
       border-left: 1px solid $brand-primary;
